--- a/static/scss/modules/media_queries.scss
+++ b/static/scss/modules/media_queries.scss
@@ -160,13 +160,23 @@
         top: 52px;
         right: 0;
         .nav-item:nth-of-type(1) {
-            margin: f.rem-calc(32 0 16);
+            margin: f.rem-calc(12 0 16);
         }
     }
     #searchFormButton {
         position: relative;
         left: 50px;
-        top: -158px;
+        top: -177px;
+    }
+    .navbar-nav .dropdown > .dropdown-menu > .dropdown-item {
+        padding: 5px;
+        text-align: left;
+        font-size: f.rem-calc(12);
+        background-color: #2b532a;
+    }
+    .secondary-navbar .dropdown > .dropdown-menu > .dropdown-item {
+        position: relative;
+        right: 35px;
     }
 }
 // @include q.respond-below(sm) {
